Redefined DefaultResourceTypes & DefaultSchemas